treat newly added bean, cleanup